Make projection generation more similar to fragments for shared association ends.